# transformers-integration

./: .gitignore  README.md  data_analysis.ipynb  pyproject.toml
.ipynb_checkpoints/: data_analysis-checkpoint.ipynb
notebooks/: ERNIE.ipynb  KEPLER.ipynb  LIBERT.ipynb  combined-kepler.ipynb  combined.ipynb  combined_base_ernie_models.ipynb  combined_base_kepler_models.ipynb
notebooks/.ipynb_checkpoints/: ERNIE-checkpoint.ipynb  KEPLER-checkpoint.ipynb  LIBERT-checkpoint.ipynb  combined_base_ernie_models-checkpoint.ipynb  config-checkpoint.py
src/: base_main.py  combined_main.py  config.py  ernie_main.py  kepler_main.py  libert_main.py  update_base_model.ipynb
src/.ipynb_checkpoints/: combined-checkpoint.ipynb  combined-kepler-checkpoint.ipynb  config-checkpoint.py  main-checkpoint.py  update_base_model-checkpoint.ipynb
src/data/: microtext_references.pickle
src/evaluation/: eval_report.py
src/individual_models/: base_main.py  ernie_main.py  kepler_main.py  libert_main.py
src/models/: background_knowledge.py  base.py  combined.py
src/models/.ipynb_checkpoints/: base-checkpoint.py
src/processing/: datasets.py  utils.py
src/processing/.ipynb_checkpoints/: datasets-checkpoint.py
src/training/: module.py
src/training/.ipynb_checkpoints/: module-checkpoint.py
