[tool.poetry]
name = "tfIntegration"
version = "0.1.0"
description = ""
authors = ["arturo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
transformers = "^4.30.2"
datasets = "^2.13.0"
peft = "^0.3.0"
lightning = "^2.0.3"
jupyterlab = "^4.0.2"
ipywidgets = "^8.0.6"
tqdm = "^4.65.0"
sentencepiece = "^0.1.99"
wandb = "^0.15.4"
tiktoken = "^0.4.0"
scikit-learn = "^1.3.0"
pydantic = "^2.0.2"
pytorch-lightning = "^2.0.4"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
